<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#631540"
        tools:context=".ui.UserActivity">

    <TextView
            android:id="@+id/text_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/text_start"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:gravity="center"
    />
    <EditText
            android:id="@+id/edit_name"
            android:hint="@string/edit_name"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textAlignment="center"
            android:layout_centerInParent="true"/>

    <Button
            android:id="@+id/button_save"
            android:backgroundTint="#913768"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginBottom="16dp"
            android:text="@string/button_start"
            android:textSize="12sp"
            android:elevation="5dp"
            android:textAlignment="center"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"


    />

</RelativeLayout>