<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".ui.MainActivity">
    <LinearLayout
            android:id="@+id/viewgroup_linear"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:background="@color/purple"
    >
        <ImageView
                android:id="@+id/image_icon_infinite"
                android:src="@drawable/ic_baseline__infinite"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:layout_gravity="center"


        />
        <ImageView
                android:id="@+id/image_icon_anchor"
                android:src="@drawable/ic_baseline_anchor"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_gravity="center"
        />
        <ImageView
                android:id="@+id/image_icon_ice"
                android:src="@drawable/ic_baseline_ice"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_gravity="center"

        />
    </LinearLayout>


    <TextView
            android:id="@+id/text_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/name_user"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_below="@id/viewgroup_linear"
            android:fontFamily="@font/alef"/>
        <TextView
                android:id="@+id/text_motivation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="220dp"
                android:text="@string/phrase_motivation"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_below="@+id/user_name"


        />
        <View
                android:id="@+id/view_lign"
                android:layout_width="100dp"
                android:layout_height="3dp"
                android:layout_marginTop="16dp"
                android:layout_below="@+id/text_motivation"
                android:background="#590F38"
                android:layout_centerHorizontal="true"
                android:elevation="15dp"

        />
        <Button
                android:id="@+id/button_new_phrase"
                android:backgroundTint="#5A163B"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:text="@string/button_new_phrase"
                android:textSize="12sp"
                android:textAlignment="center"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"


        />

</RelativeLayout>